--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,16 @@
   <title>Trip Planner!</title>
   <link rel="stylesheet" href="./style.css">
   </link>
+
+  <!--
+
+    1.12.0
+  -->
+  <link href='https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
   <script src="./bundle.js" defer></script>
 </head>
 <body>
   <div id="map"></div>
-  
+
 </body>
 </html>
